# substrate-node-tutorials

./: Cargo.toml
node/src/: chain_spec.rs
pallets/collectibles/: Cargo.toml
pallets/collectibles/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  precompiles.rs
